Closed Bug 913852 Opened 12 years ago Closed 12 years ago

BindingUtils.h doesn't need to include <algorithm>

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: bjacob, Assigned: bjacob)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch Do the min by hand (obsolete) — Splinter Review
It seems to be including <algorithm> only for one single usage of std::min. Given how critical this header is, it seems worth doing the min by hand.
Attachment #801150 - Flags: review?(ehsan)
Attachment #801150 - Attachment is obsolete: true
Attachment #801150 - Flags: review?(ehsan)
Attachment #801151 - Flags: review?(ehsan)
Blocks: 913869
Attachment #801151 - Flags: review?(ehsan) → review?(bzbarsky)
Attachment #801151 - Flags: review?(bzbarsky) → review+
Assignee: nobody → bjacob
Target Milestone: --- → mozilla27
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: