Bug 913852 - BindingUtils.h doesn't need to include <algorithm> - r=bz